src/objects/Program__c.object
<CustomObject>
    <description>An object for housing recruitment and academic program records. There are two record types: Recruitment Programs and Academic Programs.</description>
    <fields>
        <fullName>Academic_Level__c</fullName>
        <inlineHelpText>Academic level for this program</inlineHelpText>
        <label>Academic Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Academic Program Account that maps to this Program</description>
        <inlineHelpText>The Academic Program Account that maps to this Program</inlineHelpText>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (Academic Program)</relationshipLabel>
        <relationshipName>Academic_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Bin_Dept_Major__c</fullName>
        <formula>Academic_Program__r.Bin_Dept_Major__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bin Dept Major</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Bin_Number__c</fullName>
        <formula>Academic_Program__r.Bin_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bin Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Major__c</fullName>
        <formula>TEXT(Academic_Program__r.Major__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Academic Program major, from Account.</inlineHelpText>
        <label>Major</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked if this program is currently active. Unchecked otherwise.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <inlineHelpText>Applicant type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Applicant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIP_Code__c</fullName>
        <label>CIP Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campus_Code__c</fullName>
        <formula>TEXT(Academic_Program__r.Campus_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Academic Program Campus Code, from Account</inlineHelpText>
        <label>Campus Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>The Career that the Program belongs to (Ex: Undergraduate).</description>
        <inlineHelpText>Select a Career for the Program.</inlineHelpText>
        <label>Career</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <inlineHelpText>Citizenship type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Citizenship_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <inlineHelpText>Degree type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Degree Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>The degree of this program (Ex: BS, BA, etc.)</description>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <inlineHelpText>Delivery type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Delivery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to Account to connect Programs to the Account hierarchy for departments, schools, and/or colleges. Filter criteria of Record Type = University Department.</description>
        <inlineHelpText>Enter the departmental account (i.e. School of Business) the Program belongs to.</inlineHelpText>
        <label>Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Academic and Recruitment Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of the program</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division from the related Academic Program Account.</description>
        <formula>Academic_Program__r.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Division from the related Academic Program Account.</inlineHelpText>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Applicant_Type__c</fullName>
        <inlineHelpText>Applicant type(s) that this program does not apply to (applies to all if blank)</inlineHelpText>
        <label>Hide Applicant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Citizenship__c</fullName>
        <inlineHelpText>Citizenship type(s) that this program does not apply to (applies to all if blank)</inlineHelpText>
        <label>Hide Citizenship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Citizenship_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Student_Type__c</fullName>
        <inlineHelpText>Student type(s) that this program does not apply to (applies to all if blank)</inlineHelpText>
        <label>Hide Student Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_from_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this field will not show up as an option on the application.</description>
        <inlineHelpText>If checked, this field will not show up as an option on the application.</inlineHelpText>
        <label>Hide from Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Applications_Limit__c</fullName>
        <description>One Application (Any other applications, don&apos;t allow creation)
One Application Per Term (Only one application for the selected term)
One Application Per Program (Only one application for the selected program)
One Application Per Term Per Program (Only one application for the selected term and selected program)
~Blank~ No Restrictions</description>
        <label>Number of Applications Limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Application</fullName>
                </value>
                <value>
                    <fullName>One Application Per Term</fullName>
                </value>
                <value>
                    <fullName>One Application Per Program</fullName>
                </value>
                <value>
                    <fullName>One Application Per Term Per Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <description>A checkbox to mark whether or not a Program is active.</description>
        <externalId>true</externalId>
        <inlineHelpText>External code for the program (e.g. SIS ID). This is used for integration with external systems.</inlineHelpText>
        <label>Program Code</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Group__c</fullName>
        <description>Program Group from related Academic Program Account.</description>
        <formula>Academic_Program__r.Program_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Program Group from related Academic Program Account.</inlineHelpText>
        <label>Program Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name_on_Application__c</fullName>
        <inlineHelpText>Name of the program to display on the application</inlineHelpText>
        <label>Program Name on Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Record_Type__c</fullName>
        <label>Program Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recruitment Program</fullName>
                </value>
                <value>
                    <fullName>Academic Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <description>The type of Program such as a Major, Minor, etc.</description>
        <inlineHelpText>Select a Program Type for the Program.</inlineHelpText>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An internal lookup filtered by Record Type = Recruitment Program to connect Academic Program record(s) to a Recruitment Program. This field only appears in the Academic Program page layout.</description>
        <inlineHelpText>Enter the Recruitment Program related to the Academic Program.</inlineHelpText>
        <label>Recruitment Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Academic Programs</relationshipLabel>
        <relationshipName>Academic_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <inlineHelpText>Residency type this program applies to (applies to all if blank)</inlineHelpText>
        <label>Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Residency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <inlineHelpText>School/College this program is a part of</inlineHelpText>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <inlineHelpText>Student type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Student Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>Academic_Programs</fullName>
        <columns>NAME</columns>
        <columns>Career__c</columns>
        <columns>Department__c</columns>
        <columns>Active__c</columns>
        <columns>Program_Code__c</columns>
        <columns>Recruitment_Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>Academic Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Code__c</columns>
        <columns>School_College__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Post_Trad_Programs</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Program_Code__c</columns>
        <columns>Account_Major__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_College__c</field>
            <operation>equals</operation>
            <value>Adult Undergraduate,Graduate,Seminary</value>
        </filters>
        <label>Post-Trad Programs</label>
    </listViews>
    <listViews>
        <fullName>Recruitment_Programs</fullName>
        <columns>NAME</columns>
        <columns>Career__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>Recruitment Programs</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>Academic_Program</fullName>
        <active>true</active>
        <description>The official degree or major a student applies to and is admitted into.</description>
        <label>Academic Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recruitment_Program</fullName>
        <active>true</active>
        <description>The marketing value of a degree or major</description>
        <label>Recruitment Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Program_Codes_must_match</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Program_Code__c) == False &amp;&amp; Academic_Program__r.Program_Code__c !=  Program_Code__c</errorConditionFormula>
        <errorDisplayField>Academic_Program__c</errorDisplayField>
        <errorMessage>Program Codes on Program and Academic Program Account must match.</errorMessage>
    </validationRules>
</CustomObject>